Improve settings menu and connection creation [release]