@@ -46,7 +46,7 @@ dependencies {
     implementation group: 'org.kordamp.ikonli', name: 'ikonli-materialdesign2-pack', version: "12.2.0"
     implementation group: 'org.kordamp.ikonli', name: 'ikonli-javafx', version: "12.2.0"
     implementation group: 'org.kordamp.ikonli', name: 'ikonli-material-pack', version: "12.2.0"
-    implementation group: 'com.dlsc.preferencesfx', name: 'preferencesfx-core', version: '11.15.0'
+    implementation name: 'preferencesfx-core-11.15.0'
     implementation group: 'com.dlsc.formsfx', name: 'formsfx-core', version: '11.6.0'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0'
     implementation 'io.xpipe:modulefs:0.1.4'
@@ -92,6 +92,7 @@ List<String> jvmRunArgs = [
         "--add-opens", "java.base/java.lang=io.xpipe.core",
         "--add-opens", "com.dustinredmond.fxtrayicon/com.dustinredmond.fxtrayicon=io.xpipe.app",
         "--add-opens", "net.synedra.validatorfx/net.synedra.validatorfx=io.xpipe.extension",
+        "--add-opens", 'com.dlsc.preferencesfx/com.dlsc.preferencesfx.view=io.xpipe.app',
         "-Xmx8g",
         "--enable-preview",
         //  "-XX:+ExitOnOutOfMemoryError",
